<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<version>0.0.1-SNAPSHOT</version>
	<name>RTB4FREE</name>
	<description>RTB 2.8 DSP</description>
	
	<profiles>
		<profile>
			<id>allow-snapshots</id>
			<activation><activeByDefault>true</activeByDefault></activation>
			<repositories>
				<repository>
					<id>snapshots-repo</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
					<releases><enabled>false</enabled></releases>
					<snapshots><enabled>true</enabled></snapshots>
				</repository>
			</repositories>
		</profile>
	</profiles>

	<properties>
		<maven.plugin.version>2.19.1</maven.plugin.version>
		<slf4j.api.version>1.7.25</slf4j.api.version>
		<junit.version>4.13.1</junit.version>
		<graalvm.version>19.1.0</graalvm.version>
		<zookeeper.version>3.5.6</zookeeper.version>
		<kafka.version>0.10.2.2</kafka.version>
		<google.protobuf.version>3.3.1</google.protobuf.version>
		<mapdb.version>3.0.5</mapdb.version>
		<jamm.version>RELEASE</jamm.version>
		<redis.version>2.9.0</redis.version>
		<jackson.version>2.12.1</jackson.version>
		<javax.servlet.version>4.0.0</javax.servlet.version>
		<commons.pool2.version>2.5.0</commons.pool2.version>
		<commons.io.version>2.5</commons.io.version>
		<postgres.version>9.1-901-1.jdbc4</postgres.version>
		<hazelcast.version>4.0.3</hazelcast.version>
		<hazelcast-kubernetes.version>2.1</hazelcast-kubernetes.version>
		<javax.persistence.version>1.0.2</javax.persistence.version>
		<http.client.version>4.5.3</http.client.version>
		<openrtb.core.version>1.5.1</openrtb.core.version>
		<grok.version>0.1.9</grok.version>
		<maxmind.version>2.12.0</maxmind.version>
		<aws.sdk.version>1.11.880</aws.sdk.version>
		<antlr.runtime.version>4.7</antlr.runtime.version>
		<elastic.rest.version>7.6.1</elastic.rest.version>
		<jetty.server.version>9.4.35.v20201120</jetty.server.version>
		<socket.io.version>1.0.10</socket.io.version>
		<bucket4j.version>4.9.0</bucket4j.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-report-plugin</artifactId>
			<version>${maven.plugin.version}</version>
			<type>maven-plugin</type>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.api.version}</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
		<dependency>
			<groupId>org.apache.zookeeper</groupId>
			<artifactId>zookeeper</artifactId>
			<version>${zookeeper.version}</version>
			<type>pom</type>
			<exclusions>
				<exclusion>
					<groupId>com.sun.jmx</groupId>
					<artifactId>jmxri</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jdmk</groupId>
					<artifactId>jmxtools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.jms</groupId>
					<artifactId>jms</artifactId>
				</exclusion>
			</exclusions>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>${google.protobuf.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mapdb/mapdb -->
		<dependency>
			<groupId>org.mapdb</groupId>
			<artifactId>mapdb</artifactId>
			<version>${mapdb.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>${redis.version}</version>
		</dependency>

		<dependency>
			<groupId>org.zeromq</groupId>
			<artifactId>jeromq</artifactId>
			<version>0.4.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka_2.12</artifactId>
			<version>${kafka.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-cbor -->
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-cbor</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${javax.servlet.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>${jetty.server.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-pool2</artifactId>
			<version>${commons.pool2.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons.io.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-smile</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
		<dependency>
			<groupId>postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgres.version}</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.hazelcast/hazelcast -->
		<dependency>
			<groupId>com.hazelcast</groupId>
			<artifactId>hazelcast-all</artifactId>
			<version>${hazelcast.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<version>${javax.persistence.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.hazelcast</groupId>
			<artifactId>hazelcast-kubernetes</artifactId>
			<version>${hazelcast-kubernetes.version}</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${http.client.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.openrtb/openrtb-core -->
		<dependency>
			<groupId>com.google.openrtb</groupId>
			<artifactId>openrtb-core</artifactId>
			<version>${openrtb.core.version}</version>
		</dependency>

		<dependency>
			<groupId>io.krakens</groupId>
			<artifactId>java-grok</artifactId>
			<version>${grok.version}</version>
		</dependency>

		<dependency>
			<groupId>com.maxmind.geoip2</groupId>
			<artifactId>geoip2</artifactId>
			<version>${maxmind.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk</artifactId>
			<version>${aws.sdk.version}</version>
		</dependency>

		<dependency>
			<groupId>test</groupId>
			<artifactId>Cuckoo</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/cuckoo4j.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>${antlr.runtime.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.stephenc</groupId>
			<artifactId>jamm</artifactId>
			<version>${jamm.version}</version>
		</dependency>

		<dependency>
			<groupId>org.elasticsearch.client</groupId>
			<artifactId>elasticsearch-rest-client</artifactId>
			<version>${elastic.rest.version}</version>
		</dependency>
		
		<dependency>
            <groupId>com.github.vladimir-bukhtoyarov</groupId>
            <artifactId>bucket4j-hazelcast</artifactId>
            <version>${bucket4j.version}</version>
        </dependency>
       
	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>

		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<reuseForks>false</reuseForks>
					<forkCount>1</forkCount>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Premain-Class>org.github.jamm.MemoryMeter</Premain-Class>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>


		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.19.1</version>
			</plugin>


		</plugins>
	</reporting>
	<organization>
		<url>http://rtb4free.com</url>
		<name>Jacamars</name>
	</organization>
	<url>http://rtb4free.com</url>
	<groupId>RTB4FREE</groupId>
	<artifactId>RTB5</artifactId>
</project>
